// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";


package workerqueue;

// The WorkerServer service definition.
service WorkerServer {
  // Sends a request to write data
  rpc WriteData (WriteRequest) returns (stream WriteResponse) {}
  // Get Data written
  rpc GetData(GetRequest) returns (GetResponse) {}
}

// The request message containing 
// dataTowrite
message WriteRequest {
  string dataTowrite = 1;
}
// The Write response message
message WriteResponse {
  string datawritten = 1;
}
// The request message containing 
// key identifier
message GetRequest {
  string key = 1;
}
// The Get response message
message GetResponse {
  string dataResponse = 1;
}